--- a/templates/base.html
+++ b/templates/base.html
@@ -15,12 +15,12 @@
 </head>
 
 <body>
-    <div class="loader">
-        <a href="#">Mr.Purple</a>
+    <div class="loader text-center">
+        <img src="{{ static('images/loading-screen.jpg') }}" />
     </div>
     <!-- header -->
     <header>
-        <div class="container text-center">
+        <div class="container-big text-center">
 
             <div class="logo">
                 <h1>MR.PURPLE</h1>
@@ -85,11 +85,16 @@
     <nav>
         <ul>
             <li class="book-table-mob visible-xs"><a href="#">BOOK A TABLE</a></li>
-            <li><a href="about.html">about</a></li>
+           <!--  <li><a href="about.html">about</a></li>
             <li><a href="menu.html">menus</a></li>
             <li><a href="#">gallery</a></li>
             <li><a href="#">press</a></li>
-            <li><a href="#">events</a></li>
+            <li><a href="#">events</a></li> -->
+            {% for item in navs.main %}
+                    <li class="{{ item.slug }}"><a href="#{{ item.slug }}">{{ item.name }}</a></li>
+            {% endfor %}
+
+
         </ul>
     </nav>
     <div class="page-content">
@@ -97,7 +102,7 @@
     {% endblock %}
     </div>
     <footer>
-        <div class="container">
+        <div class="container-big clearfix">
             <div class="contacts">
                 <a class="address" href="#">
                     hotel indigo lower east side <br>  
@@ -111,7 +116,10 @@
                 <h4>Saturday & Sunday: 10pm – 4am</h4>
             </div>
             <div class="gerber-logo">
-                <img src="{{ static('images/footer-gerber-logo_03.png') }}" alt="Gerber Group">
+                <a href="http://Gerberbars.com" target="_blank">
+                     <img src="{{ static('images/footer-gerber-logo_03.png') }}" alt="Gerber Group">
+                </a>
+               
             </div>
         </div>
     </footer>
