--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,16 @@
 
 {% block content %}
     <div class="home-slider">
-        <div class="slide building">
-            <!-- <img class="img-responsive" src="images/home-slider-img.jpg"> -->
-         </div>
-        <div class="slide building">
-            <!-- <img class="img-responsive" src="images/home-slider-img.jpg"> -->
-         </div>
-        <div class="slide building">
-            <!-- <img class="img-responsive" src="images/home-slider-img.jpg"> -->
-         </div>
+
+
+        {% for image in boxes.gallery.by_slug['home-page-gallery'].images %}
+             <div class="slide" style="background: url({{ image }}) center;
+    background-size: cover;">
+            </div>
+        {% endfor %}
+
+   
+  
+         
     </div>
 {% endblock %}
