--- a/templates/press.html
+++ b/templates/press.html
@@ -3,58 +3,15 @@
     <div class="press">
         <div class="container">
             <div class="row">
+                {% for item in boxes.press.all %}
                 <div class="col-md-4">
+                    <img class="img-responsive" src="{{ item.image }}" />
+                    <h3>{{item.source}}</h3>
+                    <p>{{item.title}}</p>
+                </div>
+                {% endfor %}
+            </div>
 
-                    <img class="img-responsive" src="{{ static('images/press-bg_08.jpg') }}" />
-                    <h3>SAVEUR</h3>
-                    <p>Travel Guide New York City</p>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-responsive" src="{{ static('images/press-bg_03.jpg') }}" />
-                    <h3>GOTHAM MAGAZINE</h3>
-                    <p>9 NYC Rooftops for Savoring an
-                        <br> After-Work Drink</p>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-responsive" src="images/{{ static('images/press-bg_05.jpg') }}" />
-                    <h3>CONDE NAST TRAVELER</h3>
-                    <p>A Map of The Best of The Lower East Side</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <img class="img-responsive" src="{{ static('images/press-bg_08.jpg') }}" />
-                    <h3>SAVEUR</h3>
-                    <p>Travel Guide New York City</p>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-responsive" src="{{ static('images/press-bg_03.jpg') }}" />
-                    <h3>GOTHAM MAGAZINE</h3>
-                    <p>9 NYC Rooftops for Savoring an After-Work Drink</p>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-responsive" src="{{ static('images/press-bg_05.jpg') }}" />
-                    <h3>CONDE NAST TRAVELER</h3>
-                    <p>A Map of The Best of The Lower East Side</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <img class="img-responsive" src="{{ static('images/press-bg_08.jpg') }}" />
-                    <h3>SAVEUR</h3>
-                    <p>Travel Guide New York City</p>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-responsive" src="{{ static('images/press-bg_03.jpg') }}" />
-                    <h3>GOTHAM MAGAZINE</h3>
-                    <p>9 NYC Rooftops for Savoring an After-Work Drink</p>
-                </div>
-                <div class="col-md-4">
-                    <img class="img-responsive" src="{{ static('images/press-bg_05.jpg') }}" />
-                    <h3>CONDE NAST TRAVELER</h3>
-                    <p>A Map of The Best of The Lower East Side</p>
-                </div>
-            </div>
         </div>
     </div>
 
