--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Mr.Purple</title>
+    <link rel='shortcut icon' type='image/jpeg' href='{{ account.site.favicon }}' />
     <link rel="stylesheet" type="text/css" href="{{ static('css/bootstrap.min.css') }}">
     <link type="text/css" rel="stylesheet" href="http://fast.fonts.net/cssapi/12e2ec9b-8f62-41e6-8aaa-903ee8e2e9bb.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -37,7 +38,7 @@
     <div class="booking">
         <div class="container book-table-container">
             <div class="book-a-table">
-                <h2>To make a reservation for Mr. Purple please fill out the<br> form below or call (212) xxx-xxxx</h2>
+                {{ boxes.book.all[0].fields.content }}
                 <form>
                     <div class="row">
                         <div class="col-md-6">
@@ -125,6 +126,19 @@
     </footer>
     <script type="text/javascript" src="http://fast.fonts.net/jsapi/12e2ec9b-8f62-41e6-8aaa-903ee8e2e9bb.js"></script>
     <script type="text/javascript" src="{{ static('js/jquery.min.js') }}"></script>
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', '{{ account.services.google_analytics.tracking_code }}']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+
+</script>
     <script type="text/javascript" src="{{ static('js/slick.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/bootstrap.min.js') }}"></script>
     <script type="text/javascript" src="{{ static('js/main.js') }}"></script>
