--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,7 +193,7 @@ header .book-btn:hover {
 
 header .page-title {
     color: #8d5ef9;
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     font-size: 16px;
     text-transform: uppercase;
     display: block;
@@ -322,7 +322,7 @@ header .menu-toggle span:last-child {
 
 .book-table-container .book-a-table form label {
     text-transform: uppercase;
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     margin-bottom: 10px
 }
 
@@ -336,7 +336,7 @@ header .menu-toggle span:last-child {
 }
 
 .book-table-container .book-a-table form h3 {
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     color: #000;
     font-size: 14px;
     margin-top: 37px
@@ -354,7 +354,7 @@ header .menu-toggle span:last-child {
 
 .book-table-container .book-a-table form span {
     font-size: 12px;
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     font-style: italic
 }
 
@@ -425,7 +425,7 @@ footer .contacts {
 }
 
 footer .contacts a {
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     text-transform: uppercase;
     color: #000;
     font-size: 13px;
@@ -435,7 +435,7 @@ footer .contacts a {
 
 footer .contacts h4 {
     font-size: 13px;
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     text-transform: uppercase;
     letter-spacing: 1px;
     line-height: 2;
@@ -720,7 +720,7 @@ footer .gerber-logo {
 }
 
 .page-content .menus .container .box-center span.origin {
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     font-size: 13px;
     text-transform: none
 }
@@ -747,7 +747,7 @@ footer .gerber-logo {
 }
 
 .page-content .menus .container .box-center h3 {
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     margin-top: 20px;
 }
 
@@ -894,7 +894,7 @@ footer .gerber-logo {
 }
 
 .page-content .press p {
-    font-family: Helvetica;
+    font-family: HelveticaNeueW01-Thin;
     font-size: 16px;
     margin: 16px 0 62px;
     color: #000;
