--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -1,5 +1,5 @@
         /* Large Devices, Wide Screens */
-        
+
         @media only screen and (max-width: 1200px) {
             .home-slider .slide {
                 min-height: 600px;
@@ -7,12 +7,19 @@
             .page-content .gallery .gallery-slider .gal-slide img {
                 height: 600px;
             }
+            .one-slot img {
+                width: 260px;
+                height: 290px;
+            }
         }
         /* Medium Devices, Desktops */
-        
+
         @media only screen and (max-width: 992px) {
             .book-table-container {
                 padding: 0 120px;
+            }
+            nav {
+                padding-top: 140px;
             }
             .page-content .menus .container .box-center.big-box .col-md-6 {
                 margin-left: 0%;
@@ -29,15 +36,37 @@
                 border: none;
             }
             .page-content .gallery .gallery-slider .gal-slide img {
-                height: 400px;
+               
+                height: calc(100vh - 193px );
             }
             .press img {
-                width: 100%;
+                margin: 0 auto;
+            }
+            .one-slot {
+                margin: 15px 0px;
+                border: none;
+            }
+            .one-slot.last-3 {
+                border: none;
             }
         }
         /* Small Devices, Tablets */
-        
+
         @media only screen and (max-width: 769px) {
+            .banner.background-image {
+                display: none;
+            }
+
+            div.mobile-banner {
+                display: block;
+            }
+
+            .gallery-slider .slick-prev {
+                left: 20px;
+            }
+            .gallery-slider .slick-next {
+                right: 20px;
+            }
             .page-content {
                 padding-top: 96px;
             }
@@ -54,17 +83,19 @@
                 padding: 0px 44px;
             }
             nav {
-                padding-top: 150px;
+                padding-top: 130px;
             }
             nav ul li a {
                 font-size: 25px;
                 letter-spacing: 0.1em;
+                line-height: 45px;
             }
             .page-content .menus .container .box-center.big-box {
                 padding: 50px 35px;
             }
             .home-slider .slide {
-                min-height: 474px;
+                min-height: 300px;
+                height: calc(100vh - 309px);
             }
             .home-slider .slick-prev {
                 left: 30px;
@@ -86,7 +117,7 @@
             footer .gerber-logo {
                 float: none;
                 margin-top: 30px;
-                
+
             }
             .loader {
                 padding-top: 200px;
@@ -96,7 +127,7 @@
             }
         }
         /* Extra Small Devices, Phones */
-        
+
         @media only screen and (max-width: 480px) {
             .container {
                 padding: 0px 15px;
@@ -112,21 +143,46 @@
             }
         }
         /* Custom, iPhone Retina */
-        
+
         @media only screen and (max-width: 320px) {}
         /*==========  Mobile First Method  ==========*/
         /* Custom, iPhone Retina */
-        
+
         @media only screen and (min-width: 320px) {}
         /* Extra Small Devices, Phones */
-        
+
         @media only screen and (min-width: 480px) {}
         /* Small Devices, Tablets */
-        
+
         @media only screen and (min-width: 769px) {}
         /* Medium Devices, Desktops */
-        
+
         @media only screen and (min-width: 992px) {}
         /* Large Devices, Wide Screens */
-        
-        @media only screen and (min-width: 1200px) {}
+
+        @media only screen and (min-width: 1200px) {
+            .home-slider .slide {
+                height: calc(100vh - 191px);
+                width: 500px;
+            }
+            .page-content .gallery .gallery-slider .gal-slide img {
+               height: calc(100vh - 191px);  
+            }
+        }
+
+
+        @media all and (orientation:landscape) and (max-width: 769px) {
+            nav {
+                padding-top: 100px;
+            }
+            header {
+                padding: 15px 0 15px;
+            }
+            nav ul li a {
+                line-height: 32px;
+                font-size: 20px;
+            }
+            .page-content {
+                padding-top: 60px;
+            }
+}
