--- a/templates/events.html
+++ b/templates/events.html
@@ -1,45 +1,57 @@
 {% extends 'base.html' %}
+
 {% block content %}
     <div class="events">
-        <div class="banner">
-            <img class="img-responsive" src="{{ static('images/events-bg_02.jpg') }}">
-        </div>
+        
         <div class="events-content">
             <div class="container">
-                <h2>Inquire below for private events, hosting and catering.</h2>
-                <form>
+                <h2>{{ current.fields.heading.title }}</h2>
+                <form action="/form_to_email/" enctype="multipart/form-data" method="post" class="bento">
+                    {% csrf_token %}
+                    <div style="display: none;">
+                        <label>leave this field blank to prove your humanity
+                            <input type="text" name="comment_body" value="" />
+                        </label>
+                    </div>
+                    <input type="hidden" name="recipient" value="sgerber" />
                     <div class="row">
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>DATE</label>
-                                <input class="form-control" type="text">
+                                <input name="date" class="form-control" type="text">
                             </div>
                             <div class="form-group">
                                 <label>NUMBER OF GUESTS</label>
-                                <input class="form-control small" type="text">
+                                <input name="number_of_guests" class="form-control small" type="text">
                             </div>
                             <div class="form-group">
                                 <label>EMAIL</label>
-                                <input class="form-control" type="text">
+                                <input name="email" class="form-control" type="email">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label>TYPE OF EVENT</label>
-                                <input class="form-control" type="text">
+                                <input name="type_of_event" class="form-control" type="text">
                             </div>
                             <div class="form-group">
                                 <label>FULL NAME</label>
-                                <input class="form-control" type="text">
+                                <input name="full_name" class="form-control" type="text">
                             </div>
                             <div class="form-group">
                                 <label>PHONE</label>
-                                <input class="form-control" type="text">
+                                <input name="phone" class="form-control" type="text">
                             </div>
                         </div>
                     </div>
                     <button type="submit">SEND</button>
-                    <a class="purple" href="#">Download additional information ></a>
+                    <div class="success" style="display:none;">
+                        Thank you for getting in touch. We will contact you shortly.
+                    </div>
+                    <div class="error" style="display:none;">
+                        Sorry, it looks like there was an error with your request.
+                    </div>
+                    <a class="purple" href="{{ current.fields.heading.additional_information }}" target="_blank">Download additional information ></a>
                 </form>
                 <div class="this-bg">
                     <img class="rounds rounds1" src="{{ static('images/menu-bg-item_06.png') }}" data-speed="3" />
@@ -48,5 +60,18 @@
                 </div>
             </div>
         </div>
+        <div class="banner background-image" style="background-image: url('{{ current.fields.heading.featured_image }}'); ">
+        </div>
+        <div class="mobile-banner">
+            <img src="{{ current.fields.heading.featured_image }}" />
+        </div>
     </div>
+{% endblock %}
+
+{% block initScripts %}
+<script type="text/javascript">
+$(document).ready(function() {
+    Bento.Forms.initialize({formSelector: 'form'});
+});
+</script>
 {% endblock %}
