--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -3,8 +3,8 @@
 <div class="gallery">
     <div class="gallery-slider">
         {% for image in boxes.gallery.all[0].images %}
-                 <div class="gal-slide">
-                    <img src="{{ image }}" class="img-responsive" />
+                 <div class="gal-slide" style="background: url('{{ image }}') center;
+    background-size: cover;">          
                 </div>
         {% endfor %}
     </div>
@@ -12,5 +12,6 @@
 </div>
 <script type="text/javascript">
 	$('.gallery-slider').slick(galSliderOptions);
+	$('.page-content').trigger('resize');
 </script>
 {% endblock %}
